crates/rhdl/tests/expect/roll_your_own_neg_fails.expect
  × RHDL Syntax Error
  ╰─▶ RHDL Syntax Error
    ╭─[/Users/samitbasu/Devel/rhdl/crates/rhdl/tests/type_rolling.rs:98:17]
 97 │         let h = h.val();
 98 │         let j = -h;
    ·                 ─┬
    ·                  ╰── RHDL does not support the use of unary operators on this type
 99 │         signal(j)
    ╰────
  help: You cannot roll your own - operator in RHDL.  You should write a kernel and call it as a regular function.
